--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
             <li><a href="#"></a></li>
             <li><a href="#"></a></li>
             <li>
-              <img src="/svg/team.svg">
+              <img src="svg/team.svg">
             </li>
             <li><a href="#"></a></li>
             <li>
-              <img src="/svg/home.svg">
+              <img src="svg/home.svg">
             </li>
             <li id="hamburger">
-              <img src="/svg/three_dot.svg">
+              <img src="svg/three_dot.svg">
             </li>
           </ul>
         </nav>
@@ -72,8 +72,8 @@
         <!-- Uhm, just a simple one. I dont wanna ruing the simple design from the beginning -->
       </footer>
       </body>
-<script src="/jscript/jquery.min.js"></script>
-<script src="/jscript/anime.min.js"></script>
+<script src="jscript/jquery.min.js"></script>
+<script src="jscript/anime.min.js"></script>
 <script src="loader.js"></script>
 
 </html>
