Add some documentations

--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
           <path
           style="fill:none;fill-opacity:1;fill-rule:nonzero;stroke:#ffffff;stroke-width:2"
           d="m 131.32348,15.74974 c 0,0 43.06732,46.299328 18.30602,89.38852 -24.76566,42.17391 -67.701591,46.80734 -65.433044,81.59752 1.541559,23.68834 27.713024,51.14298 51.379454,49.30361 48.16496,-3.74879 99.64953,-59.38943 87.80318,-115.31474 C 211.53711,64.799343 131.32348,15.74974 131.32348,15.74974"
-          id="path24" />
+          id="path1" />
        <path
           style="fill:none;fill-opacity:1;fill-rule:nonzero;stroke:#ffffff;stroke-width:2"
           d="m 94.553804,0.11518117 c 0,0 15.652086,47.51242883 -8.885859,54.28739483 C 61.962097,60.94983 52.927328,75.962506 55.879072,91.56204 59.369475,110.04761 87.10877,122.8224 104.80605,119.67797 127.60973,115.627 145.43401,87.537338 139.40354,59.596587 133.37306,31.660209 94.553804,0.11518117 94.553804,0.11518117"
-          id="path26" />
+          id="path2" />
        <path
           style="fill:none;fill-opacity:1;fill-rule:nonzero;stroke:#ffffff;stroke-width:2"
           d="m 52.782814,54.582137 c 0,0 -24.196343,26.013813 -10.282904,50.223293 13.913449,23.69271 38.039722,26.29409 36.765307,45.84386 C 78.398087,163.954 63.691973,179.38273 50.396021,178.34918 23.335529,176.24268 -5.5862142,144.98231 1.0661341,113.55991 7.7184824,82.137509 52.782814,54.582137 52.782814,54.582137 Z m 0,0"
-          id="path28" />
+          id="path3" />
         </svg>
       </div>
       <header>
         <!-- Hmm, maybe a simple navigation?
-             <Right>
+             <RightPosition, Circle>
              Home, About Us, Gallery, Team, Contact
         -->
         <nav>
